--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,21 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   dio: ^5.7.0
+  shared_preferences: ^2.3.3
+  hive: ^2.2.3
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  path_provider: ^2.1.5
+  hive_generator: ^2.0.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
