--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A project for Kinopark VIP cinema"
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ^3.5.4
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   hive_generator: ^2.0.1
   hive_flutter: ^1.1.0
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
