--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   hive_generator: ^2.0.1
   hive_flutter: ^1.1.0
   web_socket_channel: ^3.0.1
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
