--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
