--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A project for Kinopark VIP cinema"
 
 publish_to: 'none'
 
-version: 1.0.0+2
+version: 1.0.0+7
 
 environment:
   sdk: ^3.5.4
@@ -30,6 +30,7 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   uuid: ^4.5.1
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
