--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,10 +43,13 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.release
         }
+    }
+
+    dependencies {
+        implementation 'com.google.android.gms:play-services-location:21.3.0'
+        implementation 'com.google.android.gms:play-services-base:18.5.0'
     }
 }
 
