--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A project for Kinopark VIP cinema"
 
 publish_to: 'none'
 
-version: 1.0.0+16
+version: 1.0.1+17
 
 environment:
   sdk: ^3.5.4
@@ -27,10 +27,18 @@ dependencies:
   hive_generator: ^2.0.1
   hive_flutter: ^1.1.0
   web_socket_channel: ^3.0.1
-  cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   uuid: ^4.5.1
   package_info_plus: ^8.1.2
+  flutter_dotenv: ^5.2.1
+  google_maps_flutter: ^2.10.0
+  flutter_web_plugins:
+    sdk: flutter
+  geocoding: ^3.0.0
+  permission_handler: ^11.3.1
+  location: ^6.0.2
+  geolocator: ^13.0.2
+  google_maps_flutter_web: ^0.5.10
 
 dev_dependencies:
   flutter_test:
@@ -46,3 +54,5 @@ flutter:
   assets:
     - assets/
     - assets/flags/
+    - .env.dev
+    - .env.devcommon
